# Magazin_de_jocuri

./: CMakeLists.txt  main.cpp
Entitate/: Joc.h  jocuri.cpp
Repo/: Bancnote.txt  Casa_de_marcat.cpp  Casa_de_marcat.h  Casa_de_marcat_file.cpp  Casa_de_marcat_file.h  Collection.h  Exception.cpp  Exception.h  Jocurifile.txt  RepoJoc.cpp  RepoJoc.h  Validator.cpp  Validator.h  fileRepo.cpp  fileRepo.h
Service/: Service.cpp  Service.h
Test/: Teste.cpp  Teste.h  fileTest.txt
Ui/: Ui.cpp  Ui.h
